fix : filter z-index

--- a/sass/photographer.scss
+++ b/sass/photographer.scss
@@ -53,6 +53,7 @@ main {
             margin-left: 50px;
             li {
                 list-style-type: none;
+                z-index: 2;
             }
         }
         
